RESOLVED FIXED81023
[BlackBerry] Input focus state should unfocus the frame selection instead of the field.
https://bugs.webkit.org/show_bug.cgi?id=81023
Summary [BlackBerry] Input focus state should unfocus the frame selection instead of ...
Mike Fenton
Reported 2012-03-13 12:41:16 PDT
SSIA.
Attachments
Patch (16.03 KB, patch)
2012-03-13 12:42 PDT, Mike Fenton
no flags
Mike Fenton
Comment 1 2012-03-13 12:42:48 PDT
WebKit Review Bot
Comment 2 2012-03-13 15:57:59 PDT
Comment on attachment 131695 [details] Patch Clearing flags on attachment: 131695 Committed r110630: <http://trac.webkit.org/changeset/110630>
WebKit Review Bot
Comment 3 2012-03-13 15:58:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.