[BlackBerry] Input focus state should unfocus the frame selection instead of the field. https://bugs.webkit.org/show_bug.cgi?id=81023

Patch by Mike Fenton <mifenton@rim.com> on 2012-03-13
Reviewed by Antonio Gomes.

PR 137400.

Prevent cursor drawing by unfocusing the frame selection
when input mode is not ready.

Greatly simplify the decision to focus input fields by removing
all ties to the page load state and base it on input.  Input mode
is disabled when a page load begins and enabled on any user input.

The field is focused and ready for input immediately, only the
frame selection (or cursor) is unfocused.

Reviewed Internally by Gen Mak, Antonio Gomes and Nima Ghanavatian.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::setLoadState):
(BlackBerry::WebKit::WebPagePrivate::handleMouseEvent):
* Api/WebPageClient.h:
* WebCoreSupport/EditorClientBlackBerry.cpp:
(WebCore::EditorClientBlackBerry::shouldBeginEditing):
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::InputHandler):
(BlackBerry::WebKit::InputHandler::setElementUnfocused):
(BlackBerry::WebKit::InputHandler::enableInputMode):
(BlackBerry::WebKit::InputHandler::setElementFocused):
(BlackBerry::WebKit::InputHandler::ensureFocusTextElementVisible):
(BlackBerry::WebKit::InputHandler::notifyClientOfKeyboardVisibilityChange):
(BlackBerry::WebKit::InputHandler::handleKeyboardInput):
(BlackBerry::WebKit::InputHandler::setComposingText):
* WebKitSupport/InputHandler.h:
(InputHandler):
* WebKitSupport/TouchEventHandler.cpp:
(BlackBerry::WebKit::TouchEventHandler::handleTouchPoint):

Canonical link: https://commits.webkit.org/98206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110630 268f45cc-cd09-0410-ab3c-d52691b4dbfc