Source/WebKit/blackberry/WebCoreSupport/EditorClientBlackBerry.cpp
@@ -159,7 +159,7 @@ bool EditorClientBlackBerry::shouldBeginEditing(Range* range)
     if (m_webPagePrivate->m_dumpRenderTree)
         return m_webPagePrivate->m_dumpRenderTree->shouldBeginEditingInDOMRange(range);
 
-    return m_webPagePrivate->m_inputHandler->shouldAcceptInputFocus();
+    return true;
 }
 
 bool EditorClientBlackBerry::shouldEndEditing(Range* range)
